--- a/v1/redis-slave-deployment.yaml
+++ b/v1/redis-slave-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: redis-slave
-        image: kubernetes/redis-slave:v2
+        image: gcr.io/google_samples/gb-redisslave:v1
         ports:
         - name: redis-server
           containerPort: 6379
