--- a/helm/charts/guestbook/templates/redis-slave-service.yaml
+++ b/helm/charts/guestbook/templates/redis-slave-service.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-slave
+  name: {{ .Release.Name }}-redis-slave
   labels:
-    app: redis
+    app: {{ .Release.Name }}-redis
     role: slave
 spec:
   ports:
   - port: {{ .Values.redis.port }}
     targetPort: redis-server
   selector:
-    app: redis
+    app: {{ .Release.Name }}-redis
     role: slave
 {{- end }}
