redis slave image

--- a/helm/charts/guestbook/templates/redis-slave-deployment.yaml
+++ b/helm/charts/guestbook/templates/redis-slave-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: {{ .Release.Name }}-redis-slave
-        image: kubernetes/redis-slave:v2
+        image: gcr.io/google_samples/gb-redisslave:v1
         ports:
         - name: redis-server
           containerPort: {{ .Values.redis.port }}
