--- a/helm/charts/guestbook/templates/redis-master-deployment.yaml
+++ b/helm/charts/guestbook/templates/redis-master-deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-redis-master
+  name: redis-master
   labels:
-    app: {{ .Release.Name }}-redis
+    app: redis
     role: master
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Release.Name }}-redis
+      app: redis
       role: master
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-redis
+        app: redis
         role: master
     spec:
       containers:
-      - name: {{ .Release.Name }}-redis-master
+      - name: redis-master
         image: redis:2.8.23
         ports:
         - name: redis-server
