--- a/helm/charts/guestbook/templates/redis-master-service.yaml
+++ b/helm/charts/guestbook/templates/redis-master-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-redis-master
+  name: redis-master
   labels:
-    app: {{ .Release.Name }}-redis
+    app: redis
     role: master
 spec:
   ports:
   - port: {{ .Values.redis.port }}
     targetPort: redis-server
   selector:
-    app: {{ .Release.Name }}-redis
+    app: redis
     role: master
