--- a/helm/charts/guestbook/values.yaml
+++ b/helm/charts/guestbook/values.yaml
@@ -2,11 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: ibmcom/guestbook
-  tag: v1
+  tag: v2
   pullPolicy: IfNotPresent
 
 # For some dev env (like minikube), you may need to set the type to NodePort
@@ -16,5 +16,5 @@ service:
 
 redis:
   port: 6379 
-  slaveEnabled: true
+  slaveEnabled: false
 
